--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Course Name
 description: Course description
 baseurl: "/minimal-course-template" # the subpath of your site, e.g. /blog
-url: "http://hamdikavak.com/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://hamdikavak.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
@@ -56,7 +56,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Hamdi Kavak":
+  "Dr. Hamdi Kavak":
     - "//hamdikavak.com"
 
 # Makes Aux links open in a new tab. Default is false
@@ -73,7 +73,7 @@ nav_sort: case_insensitive # default, equivalent to nil
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; Hamdi Kavak. Course name "
+footer_content: "Copyright &copy; Hamdi Kavak." | concat: *title 
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -82,7 +82,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 
 
 # Footer "Edit this page on GitHub" link text
-gh_edit_link: true # show or hide edit this page link
+gh_edit_link: false # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
 gh_edit_repository: "https://github.com/pmarsceill/just-the-docs" # the github URL for your repo
 gh_edit_branch: "master" # the branch that your docs is served from
