--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ nav_sort: case_insensitive # default, equivalent to nil
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; Hamdi Kavak." | concat: *title 
+footer_content: "Copyright &copy; Hamdi Kavak. Course Name."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
